* Change Account Screen: If existing lab is chosen user is automatically added as a LabUser to that lab.
* Change Account Screen: Users are now added as inactive to allow for review before activation.
* Change Account Screen now has more email address validation.


5.4.1
--------------------
* New navigation for DNA seq gnomex admins.  Also, removed LinkButtonBar and replaces with link buttons for
  navigation so that view can be activate from Home view and not the main nav bar (to conserve horizontal space).


5.4 (Apr 7, 2011)
--------------------
* Get rid of QC and Seq prep workflow fields on Samples tab when submitting a request or registering an external experiment.
* To fix delete bug on Analysis, DataTrack with url properties, allow nulls for idPropertyEntry on PropertyEntryValue
* Fixed problem where distribute data tracks not working after FDT upload.  Needed to register analysis files in db before distribute.
* Fixed sql bug in Analysis delete file when analysis file not yet registered in db.
* Fixed multi-select drag-and-drop to distribute data tracks. (Made synchronous http service request calls.)
* Renamed label for segment import from ch1 to chr2
* Added UsageReportd.java and related script files to create weekly usage report for CvDC
* Modified BatchDataSource.java and BatchMailer.java to add an optional constructor that defines path to orion and location of hibernate mapping file
* Modified MailUtil -- added send_bcc command to provide for sending messages with bcc field populated.
* Added AverageInsertSize and CaptureLibDesign field functionality when submitting an experiment.
* Now allow searching of Annotations by property name in advanced search.
* Only allow alphanumeric characters and space in Lab name in Create New Account
* Add validation on email address in Create New Account
* When splitting account any new items created will get the same Billing Status and Complete date as the items they were copied from.